# Couch-Control

./: .gitignore  IMPROVEMENT_PLAN.md  LICENSE  README.md  build.sh  build_windows.bat  couch-control.spec  couch-control@.service  install.sh  install_windows.bat  main.py  prd.md  pyproject.toml  requirements.txt  setup_service.sh
.github/workflows/: release.yml
couch_control/: __init__.py  __main__.py  capture.py  cli.py  config.py  input_handler.py  server.py  tray.py  tunnel.py
couch_control/static/: app.js  index.html  manifest.json  style.css
